# imlib

./: .gitignore  CMakeLists.txt  README.md  Roadmap.md
include/core/: global.h
include/core/data/: image.h
include/core/filter/: filters.h
include/core/io/: image_loader.h
src/core/data/: image.cpp
src/core/filter/: filters.cpp  filters_cuda.cu
test/core/io/: export_image_test.cpp  im_loader_test.cpp
